# TrojanHorse

./: .env.example  .env.template  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  LICENSE  README.md  TESTING_GUIDE.md  TODO.md  WORKFLOWS.md  audio_capture.py  com.contextcapture.audio.plist  findings.md  health_monitor.py  progress.md  pyproject.toml  requirements.txt  run_tests.sh  transcribe.py
TrojanHorse/: .gitignore  CLAUDE.md  MACHINE_SETUP.md  MANUAL_SETUP.md  README.md  __init__.py  api_server.py  atlas_client.py  cli.py  config.py  config.template.json  meeting_synthesizer.py  models.py  processor.py  test_cloud_analyze.py  test_transcript.analysis.md
TrojanHorse/.agent-os/: README.md
TrojanHorse/.agent-os/product/: decisions.md  mission-lite.md  mission.md  roadmap.md  tech-stack.md
TrojanHorse/.agent-os/specs/2025-07-30-cloud-intelligence/: spec-lite.md  spec.md  tasks.md
TrojanHorse/.agent-os/specs/2025-07-30-content-classification/: spec-lite.md  spec.md  tasks.md
TrojanHorse/.agent-os/specs/2025-07-30-cost-optimization/: spec-lite.md  spec.md  tasks.md
TrojanHorse/.agent-os/specs/2025-07-30-export-system/: spec-lite.md  spec.md  tasks.md
TrojanHorse/.agent-os/specs/2025-07-30-local-llm-analysis/: spec-lite.md  spec.md  tasks.md
TrojanHorse/.agent-os/specs/2025-07-30-privacy-architecture/: spec-lite.md  spec.md  (+1 more)
TrojanHorse/claude-code/user/: CLAUDE.md
TrojanHorse/docs/: API.md  ARCHITECTURE.md  HISTORY.md  ROADMAP.md  SETUP.md
TrojanHorse/docs/user_guides/: advanced_config.md  daily_operation.md  getting_started.md
TrojanHorse/notes/2025-07-30/: test_transcript.analysis.md
TrojanHorse/src/: analysis_router.py  analytics_engine.py  analyze.py  audio_capture.py  batch_analyze.py  batch_indexer.py  cloud_analyze.py  config_manager.py  database_schema.sql  health_monitor.py  hotkey_client.py  internal_api.py  main.py  process_gemini.py  search_engine.py  semantic_search.py  setup.py  transcribe.py  web_interface.py
TrojanHorse/static/css/: style.css
TrojanHorse/static/js/: app.js
TrojanHorse/templates/: base.html  committee.md  dashboard.html  default.md  index.html  one_on_one.md  transcript.html  vendor.md
TrojanHorse/tests/: __init__.py  conftest.py  run_tests.py  test_api_server.py  test_atlas_client.py  test_config_manager.py  test_database_management.py  test_integration.py  test_search_engine.py  test_security.py
TrojanHorse/workspace/: CLAUDE.md  analysis_router.py  analyze_local.py  audio_capture.py  com.contextcapture.audio.plist  config.template.json  test_reliability.py  transcribe.py
TrojanHorse/workspace/docs/: ARCHITECTURE.md  FINAL_PLAN.md
bridge/: __init__.py  bridge_service.py  vacuum.py
bridge/parsers/: __init__.py  markdown.py  opml.py
docs/: API.md  SETUP.md  TASKS.md
scripts/: com.khamel83.trojanhorse.plist  cron_template.sh  start_workday.sh  verify_setup.sh
systemd/: README.md  bridge.service  com.bridge.service.plist
tests/: __init__.py  conftest.py  test_classifier.py  test_index_db.py  test_models.py  test_rag_openrouter.py  test_router.py
trojanhorse/: __init__.py  classifier.py  cli.py  config.py  index_db.py  llm_client.py  models.py  rag.py  router.py
vault/Inbox/: 20260103_204536_Call-dentist.md  20260103_204536_Call-the-dentist.md  20260103_204646_Call-the-dentist.md  20260103_204654_Call-the-dentist.md
(+23 files in other folders)
